Fix page width on mobile by using max-width transition instead of transform

--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -19,7 +19,7 @@
 
 .site-nav-items {
   flex-direction: row;
+  max-height: unset;
   position: initial;
-  transform: none;
   transition: none;
 }
